--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
    <snapshotRepository>
      <id>deployment</id>
 	 <name>internal-Snapshot</name>
-	 <url>arn:aws:s3:::artifac</url>
+	 <url>http://34.67.9.48:8081/repository/maven-snapshots/</url>
    </snapshotRepository>
    </distributionManagement>
 </project>
